--- a/Businessas/qr_code/templates/qr_code/index.html
+++ b/Businessas/qr_code/templates/qr_code/index.html
@@ -7,52 +7,80 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     {% load static %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'qr_code/css/qr_code.css' %}">
 
 </head>
-<body>
+<body style="background-color: #f9f9f9">
 <div class = "container">
     <div class = "row">
         <div class="col-12">
-            <img class="img-fluid" src="{% static 'qr_code/img/logo.jpg' %}">
-            <hr>
-            <h1 class="text-center">Бизнес Асистент</h1>
-            <h5 class="text-center">Комплексные услуги для бизнеса:</h5>
+            <img class="img-fluid rounded mx-auto d-block" src="{% static 'qr_code/img/logo.png'%}">
+            <hr style="color: #ff0000; height: 3px; opacity: 1">
+            <div class="row">
+                <div class="col-5"><h1 class="text-end">Бизнес</h1></div>
+                <div class="col-6"><h1 class="text-start">Ассистент</h1></div>
+                <div class="col-1"></div>
+            </div>
+            <h5 class="text-center">АГЕНТСТВО БИЗНЕС УСЛУГ</h5>
 
         </div>
     </div>
     <div class = "row">
-        <div class="col-1">
-
-        </div>
-        <div class="col-11">
+        <div class="col-1"></div>
+        <div class="col-10">
             <p class="text-start">
-                Супер услуга 1 </br>
-                Супер услуга 2 </br>
-                Супер услуга 3 </br>
-                Супер услуга 4 </br>
-                Супер услуга 5 </br>
+                > БУХГАЛТЕРСКОЕ ОБСЛУЖИВАНИЕ
+            </p>
+            <p class="text-start">
+                > СОПРОВОЖДЕНИЕ РАБОТЫ С МАРКЕТПЛЕЙСАМИ
+            </p>
+            <p class="text-start">
+                > ОПТИМИЗАЦИЯ РАБОТЫ С ОНЛАЙН-КАССАМИ, ЭКВАЙРИНГОМ
+            </p>
+            <p class="text-start">
+                > ПОДБОР И ВНЕДРЕНИЕ ОБЛАЧНЫХ РЕШЕНИЙ ДЛЯ ПРИЕМА ДЕНЕГ ОНЛАЙН
+            </p>
+            <p class="text-start">
+                > МАРКИРОВКА, ЛИЦЕНЗИРОВАНИЕ, ПРОСЛЕЖИВАЕМЫЕ ТОВАРЫ, ФГИС, ЭДО
+            </p>
+            <p class="text-start">
+                > НАЛОГОВЫЕ ВОПРОСЫ
+            </p>
+            <p class="text-start">
+                > БУХГАЛТЕРСКОЕ ОБСЛУЖИВАНИЕ
+            </p>
+            <p class="text-start">
+                > РЕГИСТРАЦИЯ/ЛИКВИДАЦИЯ БИЗНЕСА
+            </p>
+            <p class="text-start">
+                > КОРПОРАТИВНЫЕ ЮРИДИЧЕСКИЕ ЗАДАЧИ
+            </p>
+            <p class="text-start">
+                > ПЕРСОНАЛЬНАЯ ПОМОЩЬ БИЗНЕС-АССИСТЕНТА ПОД ВАШ ЗАПРОС
             </p>
         </div>
-    </div>
-    <hr>
-    <div class = "row">
-        <div class="col-1"></div>
-        <div class="col-5"><button type="button" class="my_button btn btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/phone.svg' %}">Позвонить</button></div>
-        <div class="col-5"><button type="button" class="my_button btn btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/email.svg' %}">Написать</button></div>
         <div class="col-1"></div>
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-5"><button type="button" class="my_button btn btn-primary btn-sm img-fluid">Вконтакте Чат</button></div>
-        <div class="col-5"><button type="button" class="my_button btn btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/telegram.svg' %}">Telegram</button></div>
+        <div class="col-10"><button type="button" class="my_button2 btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px; margin-right: 10px;">На сайт</button></div>
         <div class="col-1"></div>
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-10"><button type="button" class="my_button btn btn-primary btn-sm img-fluid" style="background: #f06e38; border-color: #f06e38; margin-bottom: 0em; padding: 10px; border-radius: 1.58em; height: 50px; width: 500px;">Большая кнопка</button></div>
+        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/phone.svg' %}">Позвонить</button></div>
+        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/email.svg' %}">Написать</button></div>
+        <div class="col-1"></div>
+    </div>
+    <div class = "row">
+        <div class="col-1"></div>
+        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid">WhatsApp</button></div>
+        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/telegram.svg' %}">Telegram</button></div>
         <div class="col-1"></div>
     </div>
 </div>
