--- a/Businessas/qr_code/static/qr_code/css/qr_code.css
+++ b/Businessas/qr_code/static/qr_code/css/qr_code.css
@@ -13,8 +13,8 @@ div[class^=col]{
     border-radius: 0.5rem;
     margin-bottom: 15px;
     min-width: 130px;
-    background: #ff0000;
-    border-color: #ff0000;
+    background-color: #e50e3a;
+    border-color: #e50e3a;
 }
 
 .my_button2{
@@ -24,8 +24,13 @@ div[class^=col]{
     margin-bottom: 15px;
     margin-top: 15px;
     min-width: 130px;
-    background: #ff0000;
-    border-color: #ff0000;
+    background-color: #e50e3a;
+    border-color: #e50e3a;
+}
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
+    /*color: #e50e3a;*/
+    background-color: #e50e3a;
+    border-color: #e50e3a;
 }
 
 h1 {
@@ -37,12 +42,9 @@ h5 {
     font-family: 'Rubik', sans-serif;
 }
 
-h1::first-letter{
-    color:#F00;
-}
 
 p::first-letter{
-    color:#F00;
+    color:#e50e3a;
 }
 
 p {
