--- a/Businessas/qr_code/templates/qr_code/index.html
+++ b/Businessas/qr_code/templates/qr_code/index.html
@@ -20,11 +20,9 @@
     <div class = "row">
         <div class="col-12">
             <img class="img-fluid rounded mx-auto d-block" src="{% static 'qr_code/img/logo.png'%}">
-            <hr style="color: #ff0000; height: 3px; opacity: 1">
+            <hr style="color: #e50e3a; height: 3px; opacity: 1">
             <div class="row">
-                <div class="col-5"><h1 class="text-end">Бизнес</h1></div>
-                <div class="col-6"><h1 class="text-start">Ассистент</h1></div>
-                <div class="col-1"></div>
+                <div class="col-12"><h1 class="text-center"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1></div>
             </div>
             <h5 class="text-center">АГЕНТСТВО БИЗНЕС УСЛУГ</h5>
 
@@ -50,9 +48,6 @@
             </p>
             <p class="text-start">
                 > НАЛОГОВЫЕ ВОПРОСЫ
-            </p>
-            <p class="text-start">
-                > БУХГАЛТЕРСКОЕ ОБСЛУЖИВАНИЕ
             </p>
             <p class="text-start">
                 > РЕГИСТРАЦИЯ/ЛИКВИДАЦИЯ БИЗНЕСА
