--- a/Businessas/qr_code/templates/qr_code/index.html
+++ b/Businessas/qr_code/templates/qr_code/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{% static 'qr_code/css/qr_code.css' %}">
 
 </head>
-<body style="background-color: #f9f9f9">
+<body style="background-color: #f9f9f9; overflow-x:hidden;">
 <div class = "container">
     <div class = "row">
         <div class="col-12">
