--- a/Businessas/qr_code/templates/qr_code/index.html
+++ b/Businessas/qr_code/templates/qr_code/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Бизнес Ассистент</title>
     {% load static %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
             <img class="img-fluid rounded mx-auto d-block" src="{% static 'qr_code/img/logo.png'%}">
             <hr style="color: #e50e3a; height: 3px; opacity: 1">
             <div class="row">
-                <div class="col-12"><h1 class="text-center"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1></div>
+                <h1 class="text-center"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1>
             </div>
             <h5 class="text-center">АГЕНТСТВО БИЗНЕС УСЛУГ</h5>
 
@@ -79,6 +79,5 @@
         <div class="col-1"></div>
     </div>
 </div>
-
 </body>
 </html>
