--- a/Businessas/qr_code/templates/qr_code/index.html
+++ b/Businessas/qr_code/templates/qr_code/index.html
@@ -19,62 +19,46 @@
 <div class = "container">
     <div class = "row">
         <div class="col-12">
-            <img class="img-fluid rounded mx-auto d-block" src="{% static 'qr_code/img/logo.png'%}">
+            <img class="img-fluid rounded mx-auto d-block" src="{% static 'qr_code/img/logo.jpg'%}">
             <hr style="color: #e50e3a; height: 3px; opacity: 1">
             <div class="row">
                 <h1 class="text-center"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1>
             </div>
-            <h5 class="text-center">АГЕНТСТВО БИЗНЕС УСЛУГ</h5>
+            <h6 class="text-center"><span style="font-weight: bold; font-size: 1.08rem">АГЕНТСТВО БИЗНЕС УСЛУГ</span></h6>
 
         </div>
     </div>
     <div class = "row">
         <div class="col-1"></div>
         <div class="col-10">
-            <p class="text-start">
-                > БУХГАЛТЕРСКОЕ ОБСЛУЖИВАНИЕ
-            </p>
-            <p class="text-start">
-                > СОПРОВОЖДЕНИЕ РАБОТЫ С МАРКЕТПЛЕЙСАМИ
-            </p>
-            <p class="text-start">
-                > ОПТИМИЗАЦИЯ РАБОТЫ С ОНЛАЙН-КАССАМИ, ЭКВАЙРИНГОМ
-            </p>
-            <p class="text-start">
-                > ПОДБОР И ВНЕДРЕНИЕ ОБЛАЧНЫХ РЕШЕНИЙ ДЛЯ ПРИЕМА ДЕНЕГ ОНЛАЙН
-            </p>
-            <p class="text-start">
-                > МАРКИРОВКА, ЛИЦЕНЗИРОВАНИЕ, ПРОСЛЕЖИВАЕМЫЕ ТОВАРЫ, ФГИС, ЭДО
-            </p>
-            <p class="text-start">
-                > НАЛОГОВЫЕ ВОПРОСЫ
-            </p>
-            <p class="text-start">
-                > РЕГИСТРАЦИЯ/ЛИКВИДАЦИЯ БИЗНЕСА
-            </p>
-            <p class="text-start">
-                > КОРПОРАТИВНЫЕ ЮРИДИЧЕСКИЕ ЗАДАЧИ
-            </p>
-            <p class="text-start">
-                > ПЕРСОНАЛЬНАЯ ПОМОЩЬ БИЗНЕС-АССИСТЕНТА ПОД ВАШ ЗАПРОС
-            </p>
+            <ul style="padding-left: 18px;">
+                <li>БУХГАЛТЕРСКОЕ ОБСЛУЖИВАНИЕ</li>
+                <li>СОПРОВОЖДЕНИЕ РАБОТЫ С МАРКЕТПЛЕЙСАМИ</li>
+                <li>ОПТИМИЗАЦИЯ РАБОТЫ С ОНЛАЙН-КАССАМИ, ЭКВАЙРИНГОМ</li>
+                <li>ПОДБОР И ВНЕДРЕНИЕ ОБЛАЧНЫХ РЕШЕНИЙ ДЛЯ ПРИЕМА ДЕНЕГ ОНЛАЙН</li>
+                <li>МАРКИРОВКА, ЛИЦЕНЗИРОВАНИЕ, ПРОСЛЕЖИВАЕМЫЕ ТОВАРЫ, <span style="font-size: 120%">ФГИС, ЭДО</span></li>
+                <li>НАЛОГОВЫЕ ВОПРОСЫ</li>
+                <li>РЕГИСТРАЦИЯ/ЛИКВИДАЦИЯ БИЗНЕСА</li>
+                <li>КОРПОРАТИВНЫЕ ЮРИДИЧЕСКИЕ ЗАДАЧИ</li>
+                <li>ПЕРСОНАЛЬНАЯ ПОМОЩЬ БИЗНЕС-АССИСТЕНТА ПОД ВАШ ЗАПРОС</li>
+            </ul>
         </div>
         <div class="col-1"></div>
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-10"><button type="button" class="my_button2 btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px; margin-right: 10px;">На сайт</button></div>
+        <div class="col-10"><button type="button" class="my_button2 btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px;">Наш сайт</button></div>
         <div class="col-1"></div>
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/phone.svg' %}">Позвонить</button></div>
+        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/phone.svg' %}"><span style="font-family: 'Rubik', sans-serif;">Позвонить</span></button></div>
         <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/email.svg' %}">Написать</button></div>
         <div class="col-1"></div>
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid">WhatsApp</button></div>
+        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/whatsapp.png' %}">Whatsapp</button></div>
         <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/telegram.svg' %}">Telegram</button></div>
         <div class="col-1"></div>
     </div>
