--- a/Businessas/qr_code/static/qr_code/css/qr_code.css
+++ b/Businessas/qr_code/static/qr_code/css/qr_code.css
@@ -26,6 +26,7 @@ div[class^=col]{
     min-width: 130px;
     background-color: #e50e3a;
     border-color: #e50e3a;
+    padding-right: 38px;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
     /*color: #e50e3a;*/
@@ -34,12 +35,20 @@ div[class^=col]{
 }
 
 h1 {
-    font-family: 'Rubik';
+    font-family: 'Rubik_bl';
     font-weight: 900;
+    margin-bottom: 5px;
 }
 
-h5 {
+@font-face {
+    font-family: 'Rubik_bl';
+    src: local('Rubik_bl'),
+    url(../fonts/rubik-extrabold.ttf);
+}
+
+h6 {
     font-family: 'Rubik', sans-serif;
+    margin-bottom: 15px;
 }
 
 
@@ -47,9 +56,13 @@ p::first-letter{
     color:#e50e3a;
 }
 
-p {
+ul {
     /*font-size: 16px;*/
     font-size: 90%;
     margin-bottom: 5px;
     font-family: 'Rubik', sans-serif;
+}
+
+ul {
+    list-style-image: url(../img/left.png);
 }
