--- a/Businessas/qr_code/templates/qr_code/index.html
+++ b/Businessas/qr_code/templates/qr_code/index.html
@@ -47,19 +47,19 @@
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-10"><button type="button" class="my_button2 btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px;">Наш сайт</button></div>
+        <div class="col-10"><button type="button" class="my_button2 btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px;"><span style="font-family: 'Rubik_rg';">Наш сайт</span></button></div>
         <div class="col-1"></div>
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/phone.svg' %}"><span style="font-family: 'Rubik', sans-serif;">Позвонить</span></button></div>
+        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/phone.svg' %}"><span style="font-family: 'Rubik_rg';">Позвонить</span></button></div>
         <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/email.svg' %}">Написать</button></div>
         <div class="col-1"></div>
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/whatsapp.png' %}">Whatsapp</button></div>
-        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/telegram.svg' %}">Telegram</button></div>
+        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/whatsapp.png' %}"><span style="font-family: 'Rubik_rg';">WhatsАpp</span></button></div>
+        <div class="col-5"><button type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/telegram.svg' %}"><span style="font-family: 'Rubik_rg';">Telegram</span></button></div>
         <div class="col-1"></div>
     </div>
 </div>
