--- a/Businessas/qr_code/templates/qr_code/index.html
+++ b/Businessas/qr_code/templates/qr_code/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-10"><button type="button" class="my_button2 btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px;"><span style="font-family: 'Rubik_rg';">Наш сайт</span></button></div>
+        <div class="col-10"><button onclick="window.location.href = 'https://businessas.ru';" type="button" class="my_button2 btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px;"><span style="font-family: 'Rubik_rg';">Наш сайт</span></button></div>
         <div class="col-1"></div>
     </div>
     <div class = "row">
