--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -19,8 +19,69 @@
     <link href="{% static 'main/lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
     <link href="{% static 'main/lib/lightbox/css/lightbox.min.css' %}" rel="stylesheet">
 
+
     <!-- Main Stylesheet File -->
     <link href="{% static 'main/css/style.css' %}" rel="stylesheet">
+
+    <script>
+        var TxtType = function(el, toRotate, period) {
+            this.toRotate = toRotate;
+            this.el = el;
+            this.loopNum = 0;
+            this.period = parseInt(period, 10) || 2000;
+            this.txt = '';
+            this.tick();
+            this.isDeleting = false;
+        };
+
+        TxtType.prototype.tick = function() {
+            var i = this.loopNum % this.toRotate.length;
+            var fullTxt = this.toRotate[i];
+
+            if (this.isDeleting) {
+                this.txt = fullTxt.substring(0, this.txt.length - 1);
+            } else {
+                this.txt = fullTxt.substring(0, this.txt.length + 1);
+            }
+
+            this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+            var that = this;
+            var delta = 200 - Math.random() * 100;
+
+            if (this.isDeleting) { delta /= 2; }
+
+            if (!this.isDeleting && this.txt === fullTxt) {
+                delta = this.period;
+                this.isDeleting = true;
+            } else if (this.isDeleting && this.txt === '') {
+                this.isDeleting = false;
+                this.loopNum++;
+                delta = 500;
+            }
+
+            setTimeout(function() {
+                that.tick();
+            }, delta);
+        };
+
+        window.onload = function() {
+            var elements = document.getElementsByClassName('typewrite');
+            for (var i=0; i<elements.length; i++) {
+                var toRotate = elements[i].getAttribute('data-type');
+                var period = elements[i].getAttribute('data-period');
+                if (toRotate) {
+                    new TxtType(elements[i], JSON.parse(toRotate), period);
+                }
+            }
+            // INJECT CSS
+            var css = document.createElement("style");
+            css.type = "text/css";
+            css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #111}";
+            document.body.appendChild(css);
+        };
+    </script>
+
 </head>
 <body>
 <section id="headers"></section>
@@ -30,43 +91,45 @@
         <div class = "row">
             <div class="col-12">
 
-        <div class="logo float-left">
-             <a href="#headers" class="scrollto img-fluid"><img src="{% static 'main/img/logo.png' %}"></a>
-        </div>
+                <div class="logo float-left">
+                    <a href="#headers" class="scrollto img-fluid"><img src="{% static 'main/img/logo.png' %}"></a>
+                </div>
 
-        <nav class="main-nav float-right d-none d-lg-block">
-            <ul>
-                <li><a href="#about">О компании</a></li>
-                <li><a href="#services">Услуги</a></li>
-                <li><a href="#portfolio">Сотрудники</a></li>
-                <li><a href="#team2">Клиенты</a></li>
-                <li><a href="#footer" style="padding-left: 100px;">8(800)555-35-35</a></li>
-            </ul>
-        </nav><!-- .main-nav -->
+                <nav class="main-nav float-right d-none d-lg-block">
+                    <ul>
+                        <li><a href="#about">О компании</a></li>
+                        <li><a href="#services">Услуги</a></li>
+                        <li><a href="#portfolio">Сотрудники</a></li>
+                        <li><a href="#team2">Клиенты</a></li>
+                        <li><a href="#footer" style="padding-left: 100px;">8(800)555-35-35</a></li>
+                    </ul>
+                </nav><!-- .main-nav -->
             </div>
         </div>
     </div>
 </header>
 <div class="container"  style="max-width: 100%">
     <div class ="row" style="margin-top: 103px;">
-            <div class="col-6 block_1"><img class="img-fluid" src="{% static 'main/img/ob_photo.png' %}"></div>
-            <div class="col-6 block_1">
-                <div class="col-12">
+        <div class="col-6 block_1"><img class="img-fluid" src="{% static 'main/img/ob_photo.png' %}"></div>
+        <div class="col-6 block_1">
+            <div class="col-12">
                 <h1 class="text-center"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1>
                 <div class="my_txt text-left">Полный спектр услуг  для успешного ведения бизнеса</div>
-                <div class="my_txt" style="color: #e50e3a; font-size: 24px;">Бухгалтерия |</div>
-                </div>
+
+                <div class="my_txt typewrite" data-period="1000" data-type='[ "Бухгалтерия", "Налоги", "Юристы" ]'><span class="wrap"></span></div>
+
             </div>
         </div>
     </div>
+</div>
 </div>
 <section id="about">
     <div class="container"  style="max-width: 100%">
         <div class = "row">
             <div class="patern" style="margin-left: 5px;">
-                    <div class="container d-flex align-items-center justify-content-center" style="margin-top: 90px;">
-                        <dev class="phone_zg">О компании</dev>
-                    </div>
+                <div class="container d-flex align-items-center justify-content-center" style="margin-top: 90px;">
+                    <dev class="phone_zg">О компании</dev>
+                </div>
                 <div class="container d-flex align-items-center justify-content-center">
                     <dev class="phone_wb">Мы современая компания с быстрыми и уникальными решениями для вашего бизнеса. На данном рынке более 20 лет, мы постоянно развиваемся и не стоим на месте. У нас очень уютный офис, в котором вас всегда встретят с улыбкой и угостят вкусным кофе. Обслуживаясь в нашей компании, вы получаете не просто бухгалтера, а целую команду специалистов, которые сделают все для того, чтобы Вы получили максимальную пользу и комфорт</dev>
                 </div>
