Изменен цвет стирающегося текста

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -113,10 +113,10 @@
         <div class="col-6 block_1"><img class="img-fluid" src="{% static 'main/img/ob_photo.png' %}"></div>
         <div class="col-6 block_1">
             <div class="col-12">
-                <h1 class="text-center"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1>
+                <h1 class="text-left" style="margin-left: 72px;"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1>
                 <div class="my_txt text-left">Полный спектр услуг  для успешного ведения бизнеса</div>
 
-                <div class="my_txt typewrite" data-period="1000" data-type='[ "Бухгалтерия", "Налоги", "Юристы" ]'><span class="wrap"></span></div>
+                <div class="my_txt typewrite" data-period="1000" data-type='[ "Бухгалтерия", "Налоги", "Юристы" ]' style="color: #e50e3a;"><span class="wrap"></span></div>
 
             </div>
         </div>
