--- a/Businessas/qr_code/templates/qr_code/index.html
+++ b/Businessas/qr_code/templates/qr_code/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body style="background-color: #f9f9f9; overflow-x:hidden;">
-<div class = "container">
+<div class = "container_eff">
     <div class = "row">
         <div class="col-12">
             <img class="img-fluid rounded mx-auto d-block" src="{% static 'qr_code/img/logo.jpg'%}">
